--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,31 +18,28 @@
 	<form action="" id="formCadastroUser">
 
 		<div class="mb-3">
-			<label for="id" class="form-label">ID</label> <input type="text"
-				class="form-control" id="id" readonly="readonly">
+			<label for="id" class="form-label">ID</label> <input type="number"
+				class="form-control" id="id">
 		</div>
 		<div class="mb-3">
-			<label for="nome" class="form-label">Nome do usuário</label> <input
-				type="text" class="form-control" id="nome" required="required"
+			<label for="nome" class="form-label">Nome do usuário</label> <input type="text" class="form-control" id="nome" required="required"
 				placeholder="Informe o nome">
 		</div>
 		<div class="mb-3">
 			<label for="idade" class="form-label">Idade</label> <input
 				type="number" class="form-control" id="idade">
 		</div>
+		
+		<button type="button" class="btn btn-primary" onclick="salvarUsuario()">Salvar</button>
 
 
 	</form>
-	<button type="button" class="btn btn-primary" onclick="salvarUsuario">Salvar</button>
-
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
+	
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+	</script>
 		
 		<script type="text/javascript">
 		function salvarUsuario(){
@@ -50,7 +47,19 @@
 			var nome = $("#nome").val();
 			var idade = $("#idade").val();
 			
-			alert(n);
+			$.ajax({
+				  method: "POST",
+				  url: "salvar",
+				  data: JSON.stringify({id : id, nome : nome, idade : idade}),
+				  ContentType:"application/json;charset=ISO-8859-1",
+				  success: function(response){
+					  $("#id").val(response.id);
+					  alert("Gravou com Sucesso!");
+				  }
+				}).fail(function( xhr, status, errorThrown ){
+				    alert("Erro ao salvar: " + xhr.responseText );
+				  });
+			
 		}
 		
 		</script>
