Apos inserir codigo ajax, retornando erro ao tentar salvar novo nome

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Spring Boot REST API CRUD</title>
 
 <!-- Bootstrap CSS -->
 <link
@@ -18,51 +18,125 @@
 	<form action="" id="formCadastroUser">
 
 		<div class="mb-3">
-			<label for="id" class="form-label">ID</label> <input type="number"
-				class="form-control" id="id">
+			<label for="id" class="form-label">ID</label> 
+			<input type="text" class="form-control" id="id" readonly="readonly">
 		</div>
 		<div class="mb-3">
-			<label for="nome" class="form-label">Nome do usuário</label> <input type="text" class="form-control" id="nome" required="required"
-				placeholder="Informe o nome">
+			<label for="nome" class="form-label">Nome do usuário</label> 
+			<input type="text" class="form-control" id="nome" required="required"
+				placeholder="Informe o nome" required="required">
 		</div>
 		<div class="mb-3">
 			<label for="idade" class="form-label">Idade</label> <input
 				type="number" class="form-control" id="idade">
 		</div>
-		
-		<button type="button" class="btn btn-primary" onclick="salvarUsuario()">Salvar</button>
-
-
 	</form>
-	
+	<!-- Botão Salvar -->
+	<button type="button" class="btn btn-primary" onclick="salvarUsuario()">Salvar</button>
+	<!-- Botão Resetar -->
+	<button type="button" class="btn btn-secondary" onclick="document.getElementById('formCadastroUser').reset();">Novo</button>
+	<!-- Botão Pesquisar -->
+	<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Pesquisar</button>
+
+
+
+	<div class="modal fade" id="exampleModal" tabindex="-1"
+		aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Pesquisa
+						Usuario</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<form>
+					<div class="mb-3">
+					<label for="recipient-name" class="col-form-label">Informe o Nome:</label> 
+					<input type="text" class="form-control" id="nameBusca">
+						</div>
+						<button type="button" class="btn btn-success" onclick="pesquisarUser()">Buscar</button>
+					</form>
+					<table class="table" id="tabelaresultados">
+						<thead>
+							<tr>
+								<th scope="col">ID</th>
+								<th scope="col">Nome</th>
+								<th scope="col">Editar</th>
+							</tr>
+						</thead>
+						<tbody>
+
+						</tbody>
+					</table>
+
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary"
+						data-bs-dismiss="modal">Fechar</button>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Instalação do Jquery -->
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+	
+	
 	<!-- Option 1: Bootstrap Bundle with Popper -->
-	<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
 	</script>
 		
-		<script type="text/javascript">
-		function salvarUsuario(){
-			var id =$("#id").val();
+	<script type="text/javascript">	
+	
+	function pesquisarUser() {
+	var nome = $('#nameBusca').val();
+	 if(nome != null && nome.trim() != ''){
+		
+				$.ajax({
+					method : "GET",
+					url : "buscarusernome",
+					data : 'name='+nome,
+					success : function(response) {
+						$('#tabelaresultados > tbody > tr').remove();
+						
+						for(var i=0;i<response.lenght;i++){
+							$('#tabelaresultados > tbody').append('<tr><td>'+response[i].id+'</td></tr>');
+						}
+					
+					}
+				}).fail(function(xhr, status, errorThrown) {
+					alert("Erro ao pesquisar usuario: " + xhr.responseText);
+				});
+			}
+		
+		}
+		function salvarUsuario() {
+			var id = $("#id").val();
 			var nome = $("#nome").val();
 			var idade = $("#idade").val();
-			
 			$.ajax({
-				  method: "POST",
-				  url: "salvar",
-				  data: JSON.stringify({id : id, nome : nome, idade : idade}),
-				  ContentType:"application/json;charset=ISO-8859-1",
-				  success: function(response){
-					  $("#id").val(response.id);
-					  alert("Gravou com Sucesso!");
-				  }
-				}).fail(function( xhr, status, errorThrown ){
-				    alert("Erro ao salvar: " + xhr.responseText );
-				  });
-			
+				method : "POST",
+				url : "salvar",
+				data : JSON.stringify({
+					id : id,
+					nome : "nome",
+					idade : idade
+				}),
+				//data:{id:id,nome:"nome", idade:idade},
+				//ContentType : "application/json; charset=utf-8",
+				success : function(response) {
+					$("#id").val(response.id);
+					alert("Gravou com Sucesso!");
+				}
+			}).fail(function(xhr, status, errorThrown) {
+				alert("Erro ao salvar usuario: " + xhr.responseText);
+			});
 		}
-		
-		</script>
+	</script>
 
 </body>
 </html>
